Added some dynamic behavior

--- a/index-pt.html
+++ b/index-pt.html
@@ -109,6 +109,9 @@
             </p>
           </div>
         </div>
+        <a href="#services" class="hero-scroll-down" aria-label="Ir para serviços">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M12 5v14"/><path d="m19 12-7 7-7-7"/></svg>
+        </a>
       </section>
 
       <!-- Services -->
@@ -353,6 +356,8 @@
         </p>
       </div>
     </footer>
+    <script src="nav-active.js"></script>
+    <script src="technologies-animation.js"></script>
   </body>
 </html>
 
