Adding actual flags png and favicon as well as making the site more dynamic

--- a/index-pt.html
+++ b/index-pt.html
@@ -28,6 +28,7 @@
     <meta property="og:image" content="https://www.transmontech.com/og-image.png" />
 
     <link rel="canonical" href="https://www.transmontech.com/pt" />
+    <link rel="icon" href="images/favicon.png" type="image/png" />
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -53,11 +54,11 @@
             </span>
           </a>
           <div class="nav-lang nav-lang-inline">
-            <a href="index.html" class="lang-link" aria-label="English">
-              <span class="lang-flag" aria-hidden="true">🇬🇧</span>
-            </a>
             <a href="index-pt.html" class="lang-link lang-active" aria-label="Português">
-              <span class="lang-flag" aria-hidden="true">🇵🇹</span>
+              <img src="images/portugal.png" alt="" class="lang-flag" width="24" height="24" />
+            </a>
+            <a href="index.html" class="lang-link" aria-label="English">
+              <img src="images/united-kingdom.png" alt="" class="lang-flag" width="24" height="24" />
             </a>
           </div>
           <input
@@ -79,11 +80,11 @@
             <li><a href="#about">Sobre</a></li>
             <li><a href="#contact">Contacto</a></li>
             <li class="nav-lang nav-lang-desktop">
-              <a href="index.html" class="lang-link" aria-label="English">
-                <span class="lang-flag" aria-hidden="true">🇬🇧</span>
-              </a>
               <a href="index-pt.html" class="lang-link lang-active" aria-label="Português">
-                <span class="lang-flag" aria-hidden="true">🇵🇹</span>
+                <img src="images/portugal.png" alt="" class="lang-flag" width="24" height="24" />
+              </a>
+              <a href="index.html" class="lang-link" aria-label="English">
+                <img src="images/united-kingdom.png" alt="" class="lang-flag" width="24" height="24" />
               </a>
             </li>
           </ul>
@@ -242,7 +243,7 @@
       </section>
 
       <!-- How We Work -->
-      <section id="process" class="section section-alt">
+      <section id="process" class="section">
         <div class="container">
           <header class="section-header">
             <h2>Como trabalhamos</h2>
@@ -250,34 +251,33 @@
               Um processo claro, por etapas, para que saiba sempre em que ponto está o seu projecto.
             </p>
           </header>
-
-          <ol class="process-list">
-            <li class="process-step">
-              <h3>1. Descoberta</h3>
-              <p>
-                Ouvimos os seus objectivos, mapeamos processos e identificamos as oportunidades com mais impacto.
-              </p>
-            </li>
-            <li class="process-step">
-              <h3>2. Desenho</h3>
-              <p>
-                Definimos fluxos, dados e interfaces com foco em clareza e eficiência para a sua equipa.
-              </p>
-            </li>
-            <li class="process-step">
-              <h3>3. Desenvolvimento</h3>
-              <p>
-                Construímos, testamos e refinamos a aplicação seguindo boas práticas de engenharia de software.
-              </p>
-            </li>
-            <li class="process-step">
-              <h3>4. Lançamento e suporte</h3>
-              <p>
-                Fazemos o deploy, monitorizamos e apoiamos o uso diário do sistema pela sua organização.
-              </p>
-            </li>
-          </ol>
         </div>
+        <ol class="process-list">
+          <li class="process-step process-step-1">
+            <h3>1. Descoberta</h3>
+            <p>
+              Ouvimos os seus objectivos, mapeamos processos e identificamos as oportunidades com mais impacto.
+            </p>
+          </li>
+          <li class="process-step process-step-2">
+            <h3>2. Desenho</h3>
+            <p>
+              Definimos fluxos, dados e interfaces com foco em clareza e eficiência para a sua equipa.
+            </p>
+          </li>
+          <li class="process-step process-step-3">
+            <h3>3. Desenvolvimento</h3>
+            <p>
+              Construímos, testamos e refinamos a aplicação seguindo boas práticas de engenharia de software.
+            </p>
+          </li>
+          <li class="process-step process-step-4">
+            <h3>4. Lançamento e suporte</h3>
+            <p>
+              Fazemos o deploy, monitorizamos e apoiamos o uso diário do sistema pela sua organização.
+            </p>
+          </li>
+        </ol>
       </section>
 
       <!-- About -->
