--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <meta property="og:image" content="https://www.transmontech.com/og-image.png" />
 
     <link rel="canonical" href="https://www.transmontech.com" />
+    <link rel="icon" href="images/favicon.png" type="image/png" />
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -53,11 +54,11 @@
             </span>
           </a>
           <div class="nav-lang nav-lang-inline">
-            <a href="index.html" class="lang-link lang-active" aria-label="English">
-              <span class="lang-flag" aria-hidden="true">🇬🇧</span>
-            </a>
             <a href="index-pt.html" class="lang-link" aria-label="Português">
-              <span class="lang-flag" aria-hidden="true">🇵🇹</span>
+              <img src="images/portugal.png" alt="" class="lang-flag" width="24" height="24" />
+            </a>
+            <a href="index.html" class="lang-link lang-active" aria-label="English">
+              <img src="images/united-kingdom.png" alt="" class="lang-flag" width="24" height="24" />
             </a>
           </div>
           <input
@@ -79,11 +80,11 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="nav-lang nav-lang-desktop">
-              <a href="index.html" class="lang-link lang-active" aria-label="English">
-                <span class="lang-flag" aria-hidden="true">🇬🇧</span>
-              </a>
               <a href="index-pt.html" class="lang-link" aria-label="Português">
-                <span class="lang-flag" aria-hidden="true">🇵🇹</span>
+                <img src="images/portugal.png" alt="" class="lang-flag" width="24" height="24" />
+              </a>
+              <a href="index.html" class="lang-link lang-active" aria-label="English">
+                <img src="images/united-kingdom.png" alt="" class="lang-flag" width="24" height="24" />
               </a>
             </li>
           </ul>
@@ -240,7 +241,7 @@
       </section>
 
       <!-- How We Work -->
-      <section id="process" class="section section-alt">
+      <section id="process" class="section">
         <div class="container">
           <header class="section-header">
             <h2>How we work</h2>
@@ -248,34 +249,33 @@
               A clear, step-by-step approach so you always know what is happening with your project.
             </p>
           </header>
-
-          <ol class="process-list">
-            <li class="process-step">
-              <h3>1. Discovery</h3>
-              <p>
-                We listen to your goals, map your processes, and identify the most valuable opportunities.
-              </p>
-            </li>
-            <li class="process-step">
-              <h3>2. Design</h3>
-              <p>
-                We design flows, data structures, and user interfaces focused on clarity and efficiency.
-              </p>
-            </li>
-            <li class="process-step">
-              <h3>3. Development</h3>
-              <p>
-                We build, test, and refine your application using modern engineering practices.
-              </p>
-            </li>
-            <li class="process-step">
-              <h3>4. Launch &amp; support</h3>
-              <p>
-                We deploy, monitor, and support your system as your team starts using it every day.
-              </p>
-            </li>
-          </ol>
         </div>
+        <ol class="process-list">
+          <li class="process-step process-step-1">
+            <h3>1. Discovery</h3>
+            <p>
+              We listen to your goals, map your processes, and identify the most valuable opportunities.
+            </p>
+          </li>
+          <li class="process-step process-step-2">
+            <h3>2. Design</h3>
+            <p>
+              We design flows, data structures, and user interfaces focused on clarity and efficiency.
+            </p>
+          </li>
+          <li class="process-step process-step-3">
+            <h3>3. Development</h3>
+            <p>
+              We build, test, and refine your application using modern engineering practices.
+            </p>
+          </li>
+          <li class="process-step process-step-4">
+            <h3>4. Launch &amp; support</h3>
+            <p>
+              We deploy, monitor, and support your system as your team starts using it every day.
+            </p>
+          </li>
+        </ol>
       </section>
 
       <!-- About -->
